--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="cont_02">
                 <h4 class="mb-5"><img src="img/h4_02.png" alt="参加しやすく"></h4>
                 <p class="text-center mb-5"><img src="img/button_03.png" alt="初期導入費用無料化 最大2ヶ月の無料期間"></p>
-                <p class="lead">既にNet4Uを導入している地域では、医療機関や介護事業所が新たにNet4Uに参加するための費用が無料になりました。また導入後翌々月分から利用料が発生いたしますので、一定期間無料でNet4Uをご利用いただくことが可能です。</p>
+                <p class="lead">既にNet4Uを導入している地域では、医療機関や介護事業所が新たにNet4Uに参加するための費用が無料になりました。またサービス利用料の発生は、導入後翌々月分からとなりますので、一定期間Net4Uを無料でご利用いただくことが可能です。</p>
             </div>
             <hr>
             <div class="cont_03">
