--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
                     </div>
                     <div class="col-lg-5 mt-3 mb-3">
-                        <h5>2021年6月、Net4Uが全面リニューアル。<br>圧倒的に使いやすくなります。</h5>
+                        <h5>2021年6月、Net4Uが全面リニューアル。<br>Net4Uが圧倒的に使いやすくなります。</h5>
                         <p>シンプルな投稿から処方、検査結果等の診療情報まで、多彩な入力形式に対応します。<br>
                             医療と介護をつなぐ文書テンプレートもますます充実。</p>
                         <p>新機能のカレンダービューや安全性の高いテレビ会議機能で、多職種連携を支援します。</p>
@@ -133,7 +133,7 @@
 
                     <h5>Webでのお問い合わせ</h5>
                     <p class="small">以下のお問い合わせフォームからご連絡ください。</p>
-                    <form>
+                    <form name="contact" method="POST" data-netlify="true">
                         <div class="form-group row">
                             <label class="col-md-2 col-form-label" for="">お名前</label>
                             <div class="col-md-10"><input type="text" class="form-control" id="" aria-describedby="" placeholder="お名前"></div>
