--- a/index.html
+++ b/index.html
@@ -136,50 +136,46 @@
                     <form name="contact" method="POST" data-netlify="true">
                         <div class="form-group row">
                             <label class="col-md-2 col-form-label" for="">お名前</label>
-                            <div class="col-md-10"><input type="text" class="form-control" id="" aria-describedby="" placeholder="お名前"></div>
+                            <div class="col-md-10"><input type="text" class="form-control" name="name" aria-describedby="" placeholder="お名前"></div>
                         </div>
                         <div class="form-group row">
                             <label class="col-md-2 col-form-label" for="">所属</label>
-                            <div class="col-md-10"><input type="text" class="form-control" id="" aria-describedby="" placeholder="所属"></div>
+                            <div class="col-md-10"><input type="text" class="form-control" name="org" aria-describedby="" placeholder="所属"></div>
                         </div>
                         <div class="form-group row">
                             <label class="col-md-2 col-form-label" for="">メールアドレス</label>
-                            <div class="col-md-10"><input type="email" class="form-control" id="" aria-describedby="" placeholder="メールアドレス"></div>
-                        </div>
-                        <div class="form-group row">
-                            <label class="col-md-2 col-form-label" for="">メールアドレス確認</label>
-                            <div class="col-md-10"><input type="email" class="form-control" id="" aria-describedby="" placeholder="メールアドレス"></div>
+                            <div class="col-md-10"><input type="email" class="form-control" name="mail" aria-describedby="" placeholder="メールアドレス"></div>
                         </div>
                         <div class="form-group row">
                             <label class="col-md-2 col-form-label" for="">連絡先電話番号</label>
-                            <div class="col-md-10"><input type="text" class="form-control" id="" aria-describedby="" placeholder="連絡先電話番号"></div>
+                            <div class="col-md-10"><input type="text" class="form-control" name="tel" aria-describedby="" placeholder="連絡先電話番号"></div>
                         </div>
                         <div class="form-group row">
                             <label class="col-md-2 col-form-label" for="">お問い合わせ区分</label>
                             <div class="col-md-10">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="" id="" value="option1" checked>
+                                    <input class="form-check-input" type="radio" name="div" value="1" checked>
                                     <label class="form-check-label" for="">
                                         既に地域でNet4Uを導入しているが、事業所として新たにNet4Uに参加したい
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="" id="" value="option2">
+                                    <input class="form-check-input" type="radio" name="div" value="2">
                                     <label class="form-check-label" for="">
                                         これからNet4Uを地域に導入したい
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="" id="" value="option2">
+                                    <input class="form-check-input" type="radio" name="div" value="3">
                                     <label class="form-check-label" for="">
-                                        その他
+                                        Net4Uについて知りたい
                                     </label>
                                 </div>
                             </div>
                         </div>
                         <div class="form-group row">
                             <label class="col-md-2 col-form-label" for="">コメント</label>
-                            <div class="col-md-10"><textarea class="form-control" id="" rows="3"></textarea></div>
+                            <div class="col-md-10"><textarea class="form-control" name="rem" rows="3"></textarea></div>
                         </div>
                         <button type="submit" class="btn btn-primary">お問い合わせを送信</button>
                     </form>
