--- a/index.html
+++ b/index.html
@@ -136,39 +136,39 @@
                     <form name="contact" method="POST" data-netlify="true">
                         <div class="form-group row">
                             <label class="col-md-2 col-form-label" for="">お名前</label>
-                            <div class="col-md-10"><input type="text" class="form-control" name="name" aria-describedby="" placeholder="お名前"></div>
+                            <div class="col-md-10"><input type="text" class="form-control" name="名前" aria-describedby="" placeholder="お名前"></div>
                         </div>
                         <div class="form-group row">
                             <label class="col-md-2 col-form-label" for="">所属</label>
-                            <div class="col-md-10"><input type="text" class="form-control" name="org" aria-describedby="" placeholder="所属"></div>
+                            <div class="col-md-10"><input type="text" class="form-control" name="所属" aria-describedby="" placeholder="所属"></div>
                         </div>
                         <div class="form-group row">
                             <label class="col-md-2 col-form-label" for="">メールアドレス</label>
-                            <div class="col-md-10"><input type="email" class="form-control" name="mail" aria-describedby="" placeholder="メールアドレス"></div>
+                            <div class="col-md-10"><input type="email" class="form-control" name="メール" aria-describedby="" placeholder="メールアドレス"></div>
                         </div>
                         <div class="form-group row">
                             <label class="col-md-2 col-form-label" for="">連絡先電話番号</label>
-                            <div class="col-md-10"><input type="text" class="form-control" name="tel" aria-describedby="" placeholder="連絡先電話番号"></div>
+                            <div class="col-md-10"><input type="text" class="form-control" name="電話" aria-describedby="" placeholder="連絡先電話番号"></div>
                         </div>
                         <div class="form-group row">
                             <label class="col-md-2 col-form-label" for="">お問い合わせ区分</label>
                             <div class="col-md-10">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="div" value="1" checked>
+                                    <input class="form-check-input" type="radio" name="区分" value="既に地域でNet4Uを導入しており事業所として新たにNet4Uに参加したい" checked>
                                     <label class="form-check-label" for="">
-                                        既に地域でNet4Uを導入しているが、事業所として新たにNet4Uに参加したい
+                                        既に地域でNet4Uを導入しており事業所として新たにNet4Uに参加したい
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="div" value="2">
+                                    <input class="form-check-input" type="radio" name="区分" value="これからNet4Uを地域に導入したい">
                                     <label class="form-check-label" for="">
                                         これからNet4Uを地域に導入したい
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="div" value="3">
+                                    <input class="form-check-input" type="radio" name="区分" value="Net4Uについて知りたい（その他）">
                                     <label class="form-check-label" for="">
-                                        Net4Uについて知りたい
+                                        Net4Uについて知りたい（その他）
                                     </label>
                                 </div>
                             </div>
