--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
                     <h5 class="mt-5">電話でのお問い合わせ</h5>
                     <p class="small">下記の電話番号（フリーダイアル）よりお問い合わせください。</p>
                     <div class="cont_tel">
-                        <img src="img/tel.png" alt="0120-913-045">
+                        <a href="tel:0120-913-045"><img src="img/tel.png" alt="0120-913-045"></a>
                         <hr>
-                        <p class="mb-0">受付時間：平日9:00～18:00</p>
+                        <p class="mb-0">受付時間 9:00～18:00（土日祝日を除く）</p>
                     </div>
                 </div>
 
@@ -202,7 +202,7 @@
                     <p class="contact">
                         株式会社ストローハット<br>
                         〒164-0001 東京都中野区中野 5-46-4 山和ビル4F<br>
-                        TEL&nbsp;&nbsp;:&nbsp;03-5380-2768<br>
+                        TEL&nbsp;&nbsp;:&nbsp;<a href="tel:0120-913-045">0120-913-045</a><br>
                         MAIL&nbsp;:&nbsp;<a href="mailto:info@straw-hat.jp">info@straw-hat.jp</a><br>
                         URL&nbsp;&nbsp;:&nbsp;<a href="https://www.straw-hat.jp" target="_blank">https://www.straw-hat.jp</a><br>
                     </p>
