注釈を修正

--- a/note_contact.html
+++ b/note_contact.html
@@ -28,7 +28,7 @@
 	    <div class="bgc_white">
 	      <div class="cont_04">
 	        
-	        <p class="small">以下のお問い合わせフォームからご連絡ください。※業務状況により返信まで数日かかる場合があります</p>
+	        <p class="small">以下のお問い合わせフォームからご連絡ください。※業務状況により返信まで数日かかる場合があります。</p>
 	        <form name="contact" method="POST" data-netlify="true">
 	          <div class="form-group row">
 	            <label class="col-md-2 col-form-label" for="">お名前（必須）</label>
