件名をカスタマイズ

--- a/note_contact.html
+++ b/note_contact.html
@@ -70,8 +70,8 @@
 	              <textarea class="form-control" name="コメント" rows="5"></textarea>
               </div>
             </div>
-            <div class="form-group row hide">
-	            <label class="col-md-2 col-form-label" for="">【Net4u note】お問い合わせフォーム </label>
+            <div class="form-group row">
+	            <input type="hidden" name="subject" value="【Net4u note】お問い合わせフォーム" />
             </div>
 	          <button type="submit" class="btn btn-primary">お問い合わせを送信</button>
           </form>
