--- a/note_contact.html
+++ b/note_contact.html
@@ -29,7 +29,7 @@
 	      <div class="cont_04">
 	        
 	        <p class="small">以下のお問い合わせフォームからご連絡ください。※業務状況により返信まで数日かかる場合があります。</p>
-	        <form name="note_contact" method="POST" data-netlify="true">
+	        <form name="contact" method="POST" data-netlify="true">
 	          <div class="form-group row">
 	            <label class="col-md-2 col-form-label" for="">お名前（必須）</label>
 	            <div class="col-md-10">
