--- a/note_contact.html
+++ b/note_contact.html
@@ -67,8 +67,11 @@
 	          <div class="form-group row">
 	            <label class="col-md-2 col-form-label" for="">コメント</label>
 	            <div class="col-md-10">
-	              <textarea class="form-control" name="rem" rows="5"></textarea>
+	              <textarea class="form-control" name="コメント" rows="5"></textarea>
               </div>
+            </div>
+            <div class="form-group row">
+	            <input type="hidden" name="subject" value="【Net4u note】お問い合わせフォーム" />
             </div>
 	          <button type="submit" class="btn btn-primary">お問い合わせを送信</button>
           </form>
