--- a/note_contact.html
+++ b/note_contact.html
@@ -30,6 +30,7 @@
 	        
 	        <p class="small">以下のお問い合わせフォームからご連絡ください。※業務状況により返信まで数日かかる場合があります。</p>
 	        <form name="contact" method="POST" data-netlify="true">
+            <input type="hidden" name="subject" value="【Net4u note】お問い合わせフォーム" />
 	          <div class="form-group row">
 	            <label class="col-md-2 col-form-label" for="">お名前（必須）</label>
 	            <div class="col-md-10">
@@ -67,11 +68,8 @@
 	          <div class="form-group row">
 	            <label class="col-md-2 col-form-label" for="">コメント</label>
 	            <div class="col-md-10">
-	              <textarea class="form-control" name="コメント" rows="5"></textarea>
+	              <textarea class="form-control" name="rem" rows="5"></textarea>
               </div>
-            </div>
-            <div class="form-group row">
-	            <input type="hidden" name="subject" value="【Net4u note】お問い合わせフォーム" />
             </div>
 	          <button type="submit" class="btn btn-primary">お問い合わせを送信</button>
           </form>
