--- a/note_contact.html
+++ b/note_contact.html
@@ -30,7 +30,7 @@
 	        
 	        <p class="small">以下のお問い合わせフォームからご連絡ください。※業務状況により返信まで数日かかる場合があります。</p>
 	        <form name="note_contact" method="POST" data-netlify="true">
-            <input type="hidden" name="subject" value="【Net4u note】お問い合わせフォーム" />
+            <input type="hidden" name="subject" value="【Net4U note】お問い合わせフォーム" />
 	          <div class="form-group row">
 	            <label class="col-md-2 col-form-label" for="">お名前（必須）</label>
 	            <div class="col-md-10">
