--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
                     <h5>Webでのお問い合わせ</h5>
                     <p class="small">以下のお問い合わせフォームからご連絡ください。</p>
                     <form name="contact" method="POST" data-netlify="true">
+                        <input type="hidden" name="subject" value="【Net4U portal】お問い合わせフォーム" />
                         <div class="form-group row">
                             <label class="col-md-2 col-form-label" for="">お名前</label>
                             <div class="col-md-10"><input type="text" class="form-control" name="名前" aria-describedby="" placeholder="お名前"></div>
