--- a/note_contact.html
+++ b/note_contact.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
 	<!-- Site Style CSS -->
-  <!--<link href="css/note_contact.css" rel="stylesheet" type="text/css">-->
+  <link href="css/style.css" rel="stylesheet" type="text/css">
 	<link href="scss/note_contact.css" rel="stylesheet" type="text/css">
 </head>
 
