ファビコンを設置

--- a/note_contact.html
+++ b/note_contact.html
@@ -11,6 +11,9 @@
 	<!-- Site Style CSS -->
   <link href="css/style.css" rel="stylesheet" type="text/css">
 	<link href="scss/note_contact.css" rel="stylesheet" type="text/css">
+  
+  <!-- favicon -->
+  <link href="/img/favicon_note.ico" rel="icon" type="image/x-icon" />
 </head>
 
 <body>
