福井登録フォーム調整
生年月日を性別の下に移動
padding の調整

--- a/fukui_approval.html
+++ b/fukui_approval.html
@@ -48,7 +48,8 @@
 </p>
 	        <form name="note_contact" method="POST" data-netlify="true">
             <input type="hidden" name="subject" value="【福井生殖医療支援】登録フォーム" />
-	          <div class="form-group row">
+
+            <div class="form-group row">
 	            <label class="col-4 col-form-label" for="">申込年月日</label>
 	            <div class="col-4">
 	              <input type="date" class="form-control" name="date">
@@ -81,6 +82,13 @@
             </div>
 
             <div class="form-group row">
+	            <label class="col-4 col-form-label" for="">生年月日</label>
+	            <div class="col-4">
+	              <input type="date" class="form-control" name="birth-date">
+              </div>
+            </div>
+
+            <div class="form-group row">
               <label class="col-4 col-form-label" for="postal_code">郵便番号</label>
               <div class="col-3">
                 <input type="text" id="postal_code" name="zip11"  class="form-control"  onKeyUp="AjaxZip3.zip2addr(this,'','addr11','addr11');">
@@ -93,21 +101,14 @@
               </div>
             </div>
             
-            <div class="form-group row">
+            <div class="form-group row mb-5">
 	            <label class="col-4 col-form-label" for="">連絡先（電話番号）</label>
 	            <div class="col-4">
 	              <input type="tel" class="form-control" name="tel">
               </div>
             </div>
 
-            <div class="form-group row">
-	            <label class="col-4 col-form-label" for="">生年月日</label>
-	            <div class="col-4">
-	              <input type="date" class="form-control" name="birth-date">
-              </div>
-            </div>
-
-            <div class="form-group row">
+            <div class="form-group row mt-5">
 	            <label class="col-5 col-form-label" for="">専門的治療を行う医療機関</label>
 	            <div class="col-6">
 	              <select class="form-control" name="hosp">
