福井：医療機関リストを反映

--- a/fukui_approval.html
+++ b/fukui_approval.html
@@ -112,9 +112,9 @@
 	            <label class="col-5 col-form-label" for="">専門的治療を行う医療機関</label>
 	            <div class="col-6">
 	              <select class="form-control" name="hosp">
-                  <option value="A病院">A病院</option>
-                  <option value="B病院">B病院</option>
-                  <option value="C病院">C病院</option>
+                  <option value="未選択"></option>
+                  <option value="福井大学病院高度生殖医療センター">福井大学病院高度生殖医療センター</option>
+                  <option value="西ウイメンズクリニック">西ウイメンズクリニック</option>
                 </select>
               </div>
             </div>
@@ -123,9 +123,17 @@
 	            <label class="col-5 col-form-label" for="">かかりつけの医療機関</label>
 	            <div class="col-6">
 	              <select class="form-control" name="hosp">
-                  <option value="A病院">A病院</option>
-                  <option value="B病院">B病院</option>
-                  <option value="C病院">C病院</option>
+                  <option value="未選択"></option>
+                  <option value="坂井市立三国病院">坂井市立三国病院</option>
+                  <option value="春日レディースクリニック">春日レディースクリニック</option>
+                  <option value="福井勝山総合病院">福井勝山総合病院</option>
+                  <option value="福井総合クリニック">福井総合クリニック</option>
+                  <option value="福井赤十字病院">福井赤十字病院</option>
+                  <option value="打波外科胃腸科婦人科">打波外科胃腸科婦人科</option>
+                  <option value="加藤内科・婦人科クリニック">加藤内科・婦人科クリニック</option>
+                  <option value="公立丹南病院">公立丹南病院</option>
+                  <option value="井上クリニック">井上クリニック</option>
+                  <option value="公立小浜病院">公立小浜病院</option>
                 </select>
               </div>
             </div>
