フォーム名を設定

--- a/fukui_withdrawal.html
+++ b/fukui_withdrawal.html
@@ -46,7 +46,7 @@
 ※本フォームで登録する個人情報は、データの暗号化によって安全にサーバーに送信されます。
 登録情報は福井次世代型生殖医療支援情報連携ネットワークの利用開始登録にのみ利用します。<br><br>
 </p>
-	        <form name="fukui_approval" method="POST" data-netlify="true">
+	        <form name="fukui_withdrawal" method="POST" data-netlify="true">
             <input type="hidden" name="subject" value="【福井生殖医療支援】登録フォーム" />
 
             <div class="form-group row">
