--- a/fukui_withdrawal.html
+++ b/fukui_withdrawal.html
@@ -87,7 +87,7 @@
               </div>
             </div>
             
-            <button type="submit" class="btn btn-primary mt-5">お申し込み</button>
+            <button type="submit" class="btn btn-primary mt-5">同意を撤回する</button>
           </form>
 	       
         </div>
