登録フォーム文言変更

--- a/fukui_approval.html
+++ b/fukui_approval.html
@@ -39,9 +39,7 @@
 	      <div class="cont_04">
 	        
 	        <p class="preface">Fukui ART Net　宛<br><br>
-　私は、福井次世代型生殖医療支援情報連携ネットワークに関する説明を受け、その目的及び
-利用方法などを理解しましたので、私の高度生殖医療情報（個人情報を含む）をかかりつけ医
-と福井大学病院高度生殖医療センターで共有することに同意します。<br>
+　私は、福井次世代型生殖医療支援情報連携ネットワークに関する説明を受け、その目的及び 利用方法などを理解しましたので、私の高度生殖医療情報（個人情報を含む）を専門的治療を行う医療機関と、かかりつけの医療機関で共有することに同意します。<br>
 <br>
 ※本フォームで登録する個人情報は、データの暗号化によって安全にサーバーに送信されます。
 登録情報は福井次世代型生殖医療支援情報連携ネットワークの利用開始登録にのみ利用します。<br><br>
