note問い合わせの必須設定

--- a/note_contact.html
+++ b/note_contact.html
@@ -40,13 +40,13 @@
 	          <div class="form-group row">
 	            <label class="col-md-2 col-form-label" for="">お名前（必須）</label>
 	            <div class="col-md-10">
-	              <input type="text" class="form-control" name="名前" aria-describedby="" placeholder="お名前">
+	              <input type="text" class="form-control" name="名前" aria-describedby="" placeholder="お名前" required="required">
               </div>
             </div>
 	          <div class="form-group row">
 	            <label class="col-md-2 col-form-label" for="">メールアドレス（必須）</label>
 	            <div class="col-md-10">
-	              <input type="email" class="form-control" name="メール" aria-describedby="" placeholder="メールアドレス">
+	              <input type="email" class="form-control" name="メール" aria-describedby="" placeholder="メールアドレス" required="required">
               </div>
             </div>
 
