--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta description="株式会社ストローハットが提供する『医療と介護を繋ぐヘルスケア・ソーシャル・ネットワーク・システム』のご紹介サイトです。">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <!-- Site Style CSS -->
     <link rel="stylesheet" href="css/style.css">
-    <title>Net4U</title>
+    <title>Net4U【公式】</title>
 
     <!-- favicon -->
     <link rel="shortcut icon" href="img/favicon.ico">
