--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- Site Style CSS -->
     <link rel="stylesheet" href="css/style.css">
-    <title>Net4U【公式】</title>
+    <title>Net4U ヘルスケアSNS【公式】</title>
 
     <!-- favicon -->
     <link rel="shortcut icon" href="img/favicon.ico">
